--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ rsa==4.9
 six==1.16.0
 sniffio==1.2.0
 SQLAlchemy==1.4.39
+SQLAlchemy-Utils==0.38.3
 starlette==0.19.1
 toml==0.10.2
 typing-extensions==4.3.0
