--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,7 @@
-anyio==3.6.1
-cfgv==3.3.1
-click==8.1.3
-distlib==0.3.5
-ecdsa==0.18.0
-fastapi==0.79.0
-filelock==3.7.1
-geographiclib==1.52
-geopy==2.2.0
-greenlet==1.1.2
-gunicorn==20.1.0
-h11==0.13.0
-identify==2.5.3
-idna==3.3
-nodeenv==1.7.0
-numpy==1.23.1
-pandas==1.4.3
-passlib==1.7.4
-platformdirs==2.5.2
-pre-commit==2.20.0
-psycopg2-binary==2.9.3
-pyasn1==0.4.8
-pydantic==1.9.1
-python-dateutil==2.8.2
-python-jose==3.3.0
-python-multipart==0.0.5
-pytz==2022.1
-PyYAML==6.0
-rsa==4.9
-six==1.16.0
-sniffio==1.2.0
-SQLAlchemy==1.4.39
-SQLAlchemy-Utils==0.38.3
-starlette==0.19.1
-toml==0.10.2
-typing-extensions==4.3.0
-uvicorn==0.18.2
-virtualenv==20.16.3
+fastapi
+geopy
+pandas
+passlib
+python-jose
+python-multipart
+sqlalchemy
